  * adjust yubico token config text which clarifies that a dedicated
    api key from yubico is required.
  * display error message in Manage UI if token import fails
  * API /admin/testconnection accepts only the name of an existing resolver as
    parameter. Other parameters are ignored. This fixes the ability to submit
    unauthorized ldap connection requests.

 -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Thu, 12 Nov 2020 17:48:51 +0200

linotp (3.0~rc4-1) buster-dev; urgency=low

  Fixes:
  * Repaired broken link to documentation that was caused by a faulty version
    extraction.
  * Include the README.md in packaging artifacts
  * Include forgotten `linotp-create-htdigest` script for installation via setup.py

 -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Fri, 05 Mar 2021 10:15:00 +0100

linotp (3.0~rc3-1) buster-dev; urgency=low

  Fixes:
  * Missing freeradius dictionary file used for radius forwarding is now
    shipped with the debian package again.
  * `/gettoken/getotp` now works on tokens that are not in a realm.
  * `/auth/challenge-response` is again a valid way to access the testing page,
    in addition to `/auth/challenge_response`.
  * use internal database connection for managed resolvers

 -- KeyIdentity LinOTP Packaging <linotp@keyidentity.com>  Fri, 29 Jan 2021 15:11:18 +0100

linotp (3.0~rc2-1) buster-dev; urgency=low

  Features:
  * New Token Self Service interface is installed as a recommended
    dependency for /selfservice. The existing SelfService is deprecated but
    still available under /selfservice-legacy.
  * New config value SITE_ROOT_REDIRECT allows to customize the redirect
    path if the user requests the site root path ("/"). If not set, the
    browser is redirected to the selfservice controller interface.

  Breaking changes:
  * Translations fr, it, es, and zh are removed because of their bad state.
  * LDAP resolver connections to "ldap://" URLs with encryption switched